--- a/myApp/src/pages/m2p-sub3/m2p-sub3.html
+++ b/myApp/src/pages/m2p-sub3/m2p-sub3.html
@@ -14,7 +14,30 @@
 
 
 <ion-content >
+
+  <ion-list no-lines style="margin-bottom: 0;">
+    <ion-list-header color="dark">
+      Functional Movement Screen
+    </ion-list-header>
+  </ion-list>
   <ion-grid>
+    <ion-row>
+      <ion-col col-9>
+
+        <ion-row>
+          <ion-col col-2></ion-col>
+          <ion-col col-10></ion-col>
+        </ion-row>
+
+
+      </ion-col>
+      <ion-col col-3 text-center>
+        <ion-row>
+          <ion-col col-6>L</ion-col>
+          <ion-col col-6>R</ion-col>
+        </ion-row>
+      </ion-col>
+    </ion-row>
     <ion-row>
       <ion-col col-9>
 
@@ -25,11 +48,8 @@
 
 
       </ion-col>
-      <ion-col col-3>
-        <ion-row>
-          <ion-col col-6>1</ion-col>
-          <ion-col col-6>1</ion-col>
-        </ion-row>
+      <ion-col col-3 text-center>
+        <ion-badge color="dark">+</ion-badge>
       </ion-col>
     </ion-row>
 
@@ -44,8 +64,8 @@
       </ion-col>
       <ion-col col-3>
         <ion-row>
-          <ion-col col-6>1</ion-col>
-          <ion-col col-6>1</ion-col>
+          <ion-col col-6><ion-badge color="primary">1</ion-badge></ion-col>
+          <ion-col col-6><ion-badge color="primary">1</ion-badge></ion-col>
         </ion-row>
       </ion-col>
     </ion-row>
@@ -61,8 +81,8 @@
       </ion-col>
       <ion-col col-3>
         <ion-row>
-          <ion-col col-6>1</ion-col>
-          <ion-col col-6>1</ion-col>
+          <ion-col col-6><ion-badge color="secondary">2</ion-badge></ion-col>
+          <ion-col col-6><ion-badge color="primary">1</ion-badge></ion-col>
         </ion-row>
       </ion-col>
     </ion-row>
@@ -78,8 +98,8 @@
       </ion-col>
       <ion-col col-3>
         <ion-row>
-          <ion-col col-6>1</ion-col>
-          <ion-col col-6>1</ion-col>
+          <ion-col col-6><ion-badge color="secondary">2</ion-badge></ion-col>
+          <ion-col col-6><ion-badge color="secondary">2</ion-badge></ion-col>
         </ion-row>
       </ion-col>
     </ion-row>
@@ -93,11 +113,8 @@
         </ion-row>
 
       </ion-col>
-      <ion-col col-3>
-        <ion-row>
-          <ion-col col-6>1</ion-col>
-          <ion-col col-6>1</ion-col>
-        </ion-row>
+      <ion-col col-3 text-center>
+        <ion-badge color="secondary">-</ion-badge>
       </ion-col>
     </ion-row>
 
@@ -110,11 +127,8 @@
         </ion-row>
 
       </ion-col>
-      <ion-col col-3>
-        <ion-row>
-          <ion-col col-6>1</ion-col>
-          <ion-col col-6>1</ion-col>
-        </ion-row>
+      <ion-col col-3 text-center>
+        <ion-badge color="secondary">2</ion-badge>
       </ion-col>
     </ion-row>
 
@@ -129,8 +143,8 @@
       </ion-col>
       <ion-col col-3>
         <ion-row>
-          <ion-col col-6>1</ion-col>
-          <ion-col col-6>1</ion-col>
+          <ion-col col-6><ion-badge color="secondary">2</ion-badge></ion-col>
+          <ion-col col-6><ion-badge color="secondary">2</ion-badge></ion-col>
         </ion-row>
       </ion-col>
     </ion-row>
@@ -144,11 +158,8 @@
         </ion-row>
 
       </ion-col>
-      <ion-col col-3>
-        <ion-row>
-          <ion-col col-6>1</ion-col>
-          <ion-col col-6>1</ion-col>
-        </ion-row>
+      <ion-col col-3 text-center>
+        <ion-badge color="secondary">-</ion-badge>
       </ion-col>
     </ion-row>
 
@@ -163,8 +174,8 @@
       </ion-col>
       <ion-col col-3>
         <ion-row>
-          <ion-col col-6>1</ion-col>
-          <ion-col col-6>1</ion-col>
+          <ion-col col-6><ion-badge color="secondary">2</ion-badge></ion-col>
+          <ion-col col-6><ion-badge color="secondary">2</ion-badge></ion-col>
         </ion-row>
       </ion-col>
     </ion-row>
@@ -178,12 +189,73 @@
         </ion-row>
 
       </ion-col>
-      <ion-col col-3>
-        <ion-row>
-          <ion-col col-6>1</ion-col>
-          <ion-col col-6>1</ion-col>
-        </ion-row>
+      <ion-col col-3 text-center>
+        <ion-badge color="secondary">2</ion-badge>
       </ion-col>
     </ion-row>
   </ion-grid>
+
+
+  <ion-list no-lines>
+    <ion-list-header color="dark">
+      Y-Balance Test
+    </ion-list-header>
+    <ion-list-header color="light">
+      Lower Quarter Reach
+    </ion-list-header>
+
+    <ion-item>
+      <ion-label>Closed Chain Dorsiflexion</ion-label>
+      <ion-checkbox color="secondary" item-right checked="true"></ion-checkbox>
+      <div item-left text-center style="width: 30px;">
+        <img src="../../assets/img/move2perform/closed_chain_dorsiflexion.svg" style="height: 30px;"/>
+      </div>
+
+    </ion-item>
+    <ion-item>
+      <ion-label>Anterior Reach</ion-label>
+      <ion-checkbox color="secondary" item-right checked="true"></ion-checkbox>
+      <div item-left text-center style="width: 30px;">
+        <img src="../../assets/img/move2perform/anterior_reach.svg" style="height: 30px;"/>
+      </div>
+    </ion-item>
+    <ion-item>
+      <ion-label>Posterolateral Reach</ion-label>
+      <ion-checkbox color="primary" item-right checked="true"></ion-checkbox>
+      <div item-left text-center style="width: 30px;">
+        <img src="../../assets/img/move2perform/posterolateral_reach.svg" style="height: 30px;"/>
+      </div>
+    </ion-item>
+
+    <ion-list-header color="light">
+      Upper Quarter Reach
+    </ion-list-header>
+
+    <ion-item>
+      <ion-label>Medial Reach</ion-label>
+      <ion-checkbox color="primary" item-right checked="true"></ion-checkbox>
+      <div item-left text-center style="width: 30px;">
+        <img src="../../assets/img/move2perform/medial_reach.svg" style="height: 30px;"/>
+      </div>
+    </ion-item>
+
+    <ion-item>
+      <ion-label>Inferolateral Reach</ion-label>
+      <ion-checkbox color="primary" item-right checked="true"></ion-checkbox>
+      <div item-left text-center style="width: 30px;">
+        <img src="../../assets/img/move2perform/inferolateral_reach.svg" style="height: 30px;"/>
+      </div>
+    </ion-item>
+
+    <ion-item>
+      <ion-label>Superolateral Reach</ion-label>
+      <ion-checkbox color="primary" item-right checked="true"></ion-checkbox>
+      <div item-left text-center style="width: 30px;">
+        <img src="../../assets/img/move2perform/superolateral_reach.svg" style="height: 30px;"/>
+      </div>
+    </ion-item>
+
+
+  </ion-list>
+
 </ion-content>
