--- a/myApp/src/pages/m2p-sub1/m2p-sub1.html
+++ b/myApp/src/pages/m2p-sub1/m2p-sub1.html
@@ -20,7 +20,7 @@
     </ion-list-header>
 
     <ion-item>
-      <ion-label>Health History</ion-label>
+      <ion-label>Injury History</ion-label>
       <ion-checkbox color="secondary" item-right checked="true"></ion-checkbox>
       <div item-left text-center style="width: 30px;">
         <img src="../../assets/img/move2perform/health_history.svg" style="height: 30px;"/>
