add images to move2perform pages

--- a/myApp/src/pages/m2p-sub1/m2p-sub1.html
+++ b/myApp/src/pages/m2p-sub1/m2p-sub1.html
@@ -15,6 +15,18 @@
 
 <ion-content >
   <ion-list no-lines>
+    <ion-item>
+      <ion-thumbnail item-start>
+        <img src="../../assets/img/user-placeholder.svg" />
+      </ion-thumbnail>
+      <h2>Josh Parker</h2>
+      <p>Primary Activity: Soccer</p>
+      <p>Age: 27(Feb. 3rd 1990)</p>
+      <p>Gender: Male</p>
+      <p>Height: Male(176cm)</p>
+      <p>Weight: 180 lbs(76kg)</p>
+    </ion-item>
+
     <ion-list-header color="light">
       Movement Foundation
     </ion-list-header>
@@ -101,7 +113,11 @@
         <img src="../../assets/img/move2perform/explosive_control.svg" style="height: 30px;"/>
       </div>
     </ion-item>
-
-
+    <ion-list-header color="light">
+      Move2Perform Category
+    </ion-list-header>
+    <div text-center style="padding: 10px 0;">
+      <img src="../../assets/img/move2perform/m2p_category.png" style="height: 100px;"/>
+    </div>
   </ion-list>
 </ion-content>
