--- a/myApp/src/pages/m2p-sub5/m2p-sub5.html
+++ b/myApp/src/pages/m2p-sub5/m2p-sub5.html
@@ -14,5 +14,10 @@
 
 
 <ion-content padding>
-
+  <p>Ryan, you have completed screening tests designed to determine your musculoskeletal status and injury potential. Injuries are difficult to predict, that’s why we use only the most up-to-date, research-based tests.</p>
+  <p>We combine these evidence based factors to categorize your individual performance.</p>
+  <p text-center><img src="../../assets/img/move2perform/m2p_category.png" style="height: 100px;"/></p>
+  <p>Ryan, you are in the MODERATE deficit category. Based on the research, the algorithm indicates you are more likely than your peers to lose time from your sport or activity.</p>
+  <p>Here are your results compared to other College Football athletes.</p>
+  <p text-center><img src="../../assets/img/move2perform/m2p_compare.png" style="height: 140px;"/></p>
 </ion-content>
