--- a/myApp/src/pages/move2perform/move2perform.html
+++ b/myApp/src/pages/move2perform/move2perform.html
@@ -28,6 +28,8 @@
     <button ion-item [navPush]="pushPageM2pSub4">
       Movement Performance Report
     </button>
-
+    <button ion-item [navPush]="pushPageM2pSub5">
+      Movement Efficiency Report
+    </button>
   </ion-list>
 </ion-content>
