--- a/myApp/src/pages/m2p-sub3/m2p-sub3.html
+++ b/myApp/src/pages/m2p-sub3/m2p-sub3.html
@@ -13,7 +13,7 @@
 </ion-header>
 
 
-<ion-content >
+<ion-content class="m2p">
 
   <ion-list no-lines style="margin-bottom: 0;">
     <ion-list-header color="dark">
