add images and gauge

--- a/myApp/src/pages/home/home.html
+++ b/myApp/src/pages/home/home.html
@@ -32,7 +32,7 @@
 
     <ion-row>
       <ion-col col-6 text-center [navPush]="pushPageMove2performPage" [navParams]="params">
-        <p>Move2Perform</p>
+        <img src="../../assets/img/M2PLogo.svg" style="max-width: 100px; padding-top: 50px;"/>
       </ion-col>
       <ion-col col-6 text-center [navPush]="pushPage" [navParams]="params">
         <img src="../../assets/img/manage-clients-01.svg" style="max-height: 80px"/>
