--- a/myApp/src/pages/m2p-sub1/m2p-sub1.html
+++ b/myApp/src/pages/m2p-sub1/m2p-sub1.html
@@ -7,7 +7,7 @@
 <ion-header color="dark">
 
   <ion-navbar color="dark">
-    <ion-title>Movement Efficiency Report</ion-title>
+    <ion-title>Movement Foundation</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -15,20 +15,9 @@
 
 <ion-content >
   <ion-list no-lines>
-    <ion-item>
-      <ion-thumbnail item-start>
-        <img src="../../assets/img/user-placeholder.svg" />
-      </ion-thumbnail>
-      <h2>Josh Parker</h2>
-      <p>Primary Activity: Soccer</p>
-      <p>Age: 27(Feb. 3rd 1990)</p>
-      <p>Gender: Male</p>
-      <p>Height: Male(176cm)</p>
-      <p>Weight: 180 lbs(76kg)</p>
-    </ion-item>
 
     <ion-list-header color="light">
-      Movement Foundation
+      Injury History
     </ion-list-header>
 
     <ion-item>
@@ -39,85 +28,56 @@
       </div>
 
     </ion-item>
+
+    <ion-list-header color="light">
+      Breathing Screen
+    </ion-list-header>
+
     <ion-item>
-      <ion-label>Breathing Screen</ion-label>
+      <ion-label>Questionnaire</ion-label>
+      <ion-checkbox color="secondary" item-right checked="true"></ion-checkbox>
+      <div item-left text-center style="width: 30px;">
+        <img src="../../assets/img/move2perform/questionnaire.svg" style="height: 30px;"/>
+      </div>
+
+    </ion-item>
+
+    <ion-item>
+      <ion-label>Functional Residual Capacity</ion-label>
+      <ion-checkbox color="secondary" item-right checked="true"></ion-checkbox>
+      <div item-left text-center style="width: 30px;">
+        <img src="../../assets/img/move2perform/breathing_frc_tlc.svg" style="height: 30px;"/>
+      </div>
+
+    </ion-item>
+
+    <ion-item>
+      <ion-label>Total Lung Capacity</ion-label>
       <ion-checkbox color="secondary" item-right checked="true"></ion-checkbox>
       <div item-left text-center style="width: 30px;">
         <img src="../../assets/img/move2perform/breathing_screen.svg" style="height: 30px;"/>
       </div>
-    </ion-item>
-    <ion-item>
-      <ion-label>Functional Movement Screen</ion-label>
-      <ion-checkbox color="primary" item-right checked="true"></ion-checkbox>
-      <div item-left text-center style="width: 30px;">
-        <img src="../../assets/img/move2perform/movement_screen.svg" style="height: 30px;"/>
-      </div>
+
     </ion-item>
 
-
-  </ion-list>
-
-  <ion-list no-lines>
     <ion-list-header color="light">
-      Movement Foundation
+      Functional Movement Screen
     </ion-list-header>
 
     <ion-item>
-      <ion-label>Functional Movement Screen</ion-label>
-      <ion-checkbox color="primary" item-right checked="true"></ion-checkbox>
-      <div item-left text-center style="width: 30px;">
-        <img src="../../assets/img/move2perform/movement_screen.svg" style="height: 30px;"/>
-      </div>
-    </ion-item>
-    <ion-item>
-      <ion-label>Y-Balance Test</ion-label>
-      <ion-checkbox color="fmsBlue" item-right checked="true"></ion-checkbox>
-      <div item-left text-center style="width: 30px;">
-        <img src="../../assets/img/move2perform/y_balance_test.svg" style="height: 30px;"/>
-      </div>
-    </ion-item>
-
-
-  </ion-list>
-
-  <ion-list no-lines>
-    <ion-list-header color="light">
-      Movement Performance
-    </ion-list-header>
-
-    <ion-item>
-      <ion-label>Movement Control</ion-label>
-      <ion-checkbox color="primary" item-right checked="true"></ion-checkbox>
-      <div item-left text-center style="width: 30px;">
-        <img src="../../assets/img/move2perform/movement_control.svg" style="height: 30px;"/>
-      </div>
-    </ion-item>
-    <ion-item>
-      <ion-label>Postural Control</ion-label>
+      <ion-label>Extension Clearing Test</ion-label>
       <ion-checkbox color="secondary" item-right checked="true"></ion-checkbox>
       <div item-left text-center style="width: 30px;">
-        <img src="../../assets/img/move2perform/postural_control.svg" style="height: 30px;"/>
+        <img src="../../assets/img/move2perform/extension_clearing_test.svg" style="height: 30px;"/>
       </div>
+
     </ion-item>
-    <ion-item>
-      <ion-label>Impact Control</ion-label>
-      <ion-checkbox color="primary" item-right checked="true"></ion-checkbox>
-      <div item-left text-center style="width: 30px;">
-        <img src="../../assets/img/move2perform/impact_control.svg" style="height: 30px;"/>
-      </div>
-    </ion-item>
-    <ion-item>
-      <ion-label>Explosive Control</ion-label>
-      <ion-checkbox color="secondary" item-right checked="true"></ion-checkbox>
-      <div item-left text-center style="width: 30px;">
-        <img src="../../assets/img/move2perform/explosive_control.svg" style="height: 30px;"/>
-      </div>
-    </ion-item>
-    <ion-list-header color="light">
-      Move2Perform Category
-    </ion-list-header>
-    <div text-center style="padding: 10px 0;">
-      <img src="../../assets/img/move2perform/m2p_category.png" style="height: 100px;"/>
-    </div>
+
+
+
+
+
+
   </ion-list>
+
 </ion-content>
