--- a/myApp/src/pages/m2p-sub1/m2p-sub1.html
+++ b/myApp/src/pages/m2p-sub1/m2p-sub1.html
@@ -20,9 +20,9 @@
       Injury History
     </ion-list-header>
 
-    <ion-item>
+    <ion-item color="pass" (click)="openModal({charNum: 0})">
       <ion-label>Injury History</ion-label>
-      <ion-checkbox color="secondary" item-right checked="true"></ion-checkbox>
+      <ion-badge color="secondary" item-right>Pass</ion-badge>
       <div item-left text-center style="width: 30px;">
         <img src="../../assets/img/move2perform/health_history.svg" style="height: 30px;"/>
       </div>
