--- a/myApp/src/pages/move2perform/move2perform.html
+++ b/myApp/src/pages/move2perform/move2perform.html
@@ -29,6 +29,24 @@
       <p>Weight: 180 lbs(76kg)</p>
     </ion-item>
 
+    <div class="gauge-container">
+      <div class="gauge">
+        <div class="parts">
+          <div class="part">
+          </div>
+          <div class="part">
+          </div>
+          <div class="part">
+          </div>
+          <div class="part">
+          </div>
+        </div>
+        <div class="indicator" style=" transform: rotateZ( 5deg ) ;"></div>
+        <div class="score">
+          <h3>Substantial Deficit</h3>
+        </div>
+      </div>
+    </div>
 
   </ion-list>
 
