--- a/myApp/src/pages/m2p-sub22-modal/m2p-sub22-modal.html
+++ b/myApp/src/pages/m2p-sub22-modal/m2p-sub22-modal.html
@@ -24,24 +24,24 @@
       Lower Quarter Reach
     </ion-list-header>
 
-    <ion-item>
+    <ion-item color="Pass">
       <ion-label>Closed Chain Dorsiflexion</ion-label>
-      <ion-checkbox color="secondary" item-right checked="true"></ion-checkbox>
+      <ion-badge color="secondary" item-right>Pass</ion-badge>
       <div item-left text-center style="width: 30px;">
         <img src="../../assets/img/move2perform/closed_chain_dorsiflexion.svg" style="height: 30px;"/>
       </div>
 
     </ion-item>
-    <ion-item>
+    <ion-item color="Pass">
       <ion-label>Anterior Reach</ion-label>
-      <ion-checkbox color="secondary" item-right checked="true"></ion-checkbox>
+      <ion-badge color="secondary" item-right>Pass</ion-badge>
       <div item-left text-center style="width: 30px;">
         <img src="../../assets/img/move2perform/anterior_reach.svg" style="height: 30px;"/>
       </div>
     </ion-item>
-    <ion-item>
+    <ion-item color="Fail">
       <ion-label>Posterolateral Reach</ion-label>
-      <ion-checkbox color="primary" item-right checked="true"></ion-checkbox>
+      <ion-badge color="primary" item-right>Fail</ion-badge>
       <div item-left text-center style="width: 30px;">
         <img src="../../assets/img/move2perform/posterolateral_reach.svg" style="height: 30px;"/>
       </div>
@@ -51,25 +51,25 @@
       Upper Quarter Reach
     </ion-list-header>
 
-    <ion-item>
+    <ion-item color="Fail">
       <ion-label>Medial Reach</ion-label>
-      <ion-checkbox color="primary" item-right checked="true"></ion-checkbox>
+      <ion-badge color="primary" item-right>Fail</ion-badge>
       <div item-left text-center style="width: 30px;">
         <img src="../../assets/img/move2perform/medial_reach.svg" style="height: 30px;"/>
       </div>
     </ion-item>
 
-    <ion-item>
+    <ion-item color="Fail">
       <ion-label>Inferolateral Reach</ion-label>
-      <ion-checkbox color="primary" item-right checked="true"></ion-checkbox>
+      <ion-badge color="primary" item-right>Fail</ion-badge>
       <div item-left text-center style="width: 30px;">
         <img src="../../assets/img/move2perform/inferolateral_reach.svg" style="height: 30px;"/>
       </div>
     </ion-item>
 
-    <ion-item>
+    <ion-item color="Fail">
       <ion-label>Superolateral Reach</ion-label>
-      <ion-checkbox color="primary" item-right checked="true"></ion-checkbox>
+      <ion-badge color="primary" item-right>Fail</ion-badge>
       <div item-left text-center style="width: 30px;">
         <img src="../../assets/img/move2perform/superolateral_reach.svg" style="height: 30px;"/>
       </div>
