--- a/myApp/src/pages/m2p-sub3/m2p-sub3.html
+++ b/myApp/src/pages/m2p-sub3/m2p-sub3.html
@@ -15,246 +15,20 @@
 
 <ion-content class="m2p">
 
-  <ion-list no-lines style="margin-bottom: 0;">
-    <ion-list-header color="dark">
-      Functional Movement Screen
-    </ion-list-header>
-  </ion-list>
-  <ion-grid>
-    <ion-row>
-      <ion-col col-9>
+  <ion-list no-lines [navPush]="pushPageM3pSub1">
 
-        <ion-row>
-          <ion-col col-2></ion-col>
-          <ion-col col-10></ion-col>
-        </ion-row>
-
-
-      </ion-col>
-      <ion-col col-3 text-center>
-        <ion-row>
-          <ion-col col-6>L</ion-col>
-          <ion-col col-6>R</ion-col>
-        </ion-row>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col col-9>
-
-        <ion-row>
-          <ion-col col-2><img src="../../assets/img/move2perform/extension_clearing_test.svg" style="height: 30px;"/></ion-col>
-          <ion-col col-10>Extension Clearing</ion-col>
-        </ion-row>
-
-
-      </ion-col>
-      <ion-col col-3 text-center>
-        <ion-badge color="dark">+</ion-badge>
-      </ion-col>
-    </ion-row>
-
-    <ion-row>
-      <ion-col col-9>
-
-        <ion-row>
-          <ion-col col-2><img src="../../assets/img/move2perform/active_straight_leg_raise.svg" style="height: 30px;"/></ion-col>
-          <ion-col col-10>Active Straight Leg Raise</ion-col>
-        </ion-row>
-
-      </ion-col>
-      <ion-col col-3>
-        <ion-row>
-          <ion-col col-6><ion-badge color="primary">1</ion-badge></ion-col>
-          <ion-col col-6><ion-badge color="primary">1</ion-badge></ion-col>
-        </ion-row>
-      </ion-col>
-    </ion-row>
-
-    <ion-row>
-      <ion-col col-9>
-
-        <ion-row>
-          <ion-col col-2><img src="../../assets/img/move2perform/hurdle_step.svg" style="height: 30px;"/></ion-col>
-          <ion-col col-10>Hurdle Step</ion-col>
-        </ion-row>
-
-      </ion-col>
-      <ion-col col-3>
-        <ion-row>
-          <ion-col col-6><ion-badge color="secondary">2</ion-badge></ion-col>
-          <ion-col col-6><ion-badge color="primary">1</ion-badge></ion-col>
-        </ion-row>
-      </ion-col>
-    </ion-row>
-
-    <ion-row>
-      <ion-col col-9>
-
-        <ion-row>
-          <ion-col col-2><img src="../../assets/img/move2perform/shoulder_mobility.svg" style="height: 30px;"/></ion-col>
-          <ion-col col-10>Shoulder Mobility</ion-col>
-        </ion-row>
-
-      </ion-col>
-      <ion-col col-3>
-        <ion-row>
-          <ion-col col-6><ion-badge color="secondary">2</ion-badge></ion-col>
-          <ion-col col-6><ion-badge color="secondary">2</ion-badge></ion-col>
-        </ion-row>
-      </ion-col>
-    </ion-row>
-
-    <ion-row>
-      <ion-col col-9>
-
-        <ion-row>
-          <ion-col col-2><img src="../../assets/img/move2perform/impingment_clearing.svg" style="height: 30px;"/></ion-col>
-          <ion-col col-10>Impingement Clearing</ion-col>
-        </ion-row>
-
-      </ion-col>
-      <ion-col col-3 text-center>
-        <ion-badge color="secondary">-</ion-badge>
-      </ion-col>
-    </ion-row>
-
-    <ion-row>
-      <ion-col col-9>
-
-        <ion-row>
-          <ion-col col-2><img src="../../assets/img/move2perform/trunk_stability_pushup.svg" style="height: 30px;"/></ion-col>
-          <ion-col col-10>Trunk Stability Push-up</ion-col>
-        </ion-row>
-
-      </ion-col>
-      <ion-col col-3 text-center>
-        <ion-badge color="secondary">2</ion-badge>
-      </ion-col>
-    </ion-row>
-
-    <ion-row>
-      <ion-col col-9>
-
-        <ion-row>
-          <ion-col col-2><img src="../../assets/img/move2perform/rotary_stability.svg" style="height: 30px;"/></ion-col>
-          <ion-col col-10>Rotary Stability</ion-col>
-        </ion-row>
-
-      </ion-col>
-      <ion-col col-3>
-        <ion-row>
-          <ion-col col-6><ion-badge color="secondary">2</ion-badge></ion-col>
-          <ion-col col-6><ion-badge color="secondary">2</ion-badge></ion-col>
-        </ion-row>
-      </ion-col>
-    </ion-row>
-
-    <ion-row>
-      <ion-col col-9>
-
-        <ion-row>
-          <ion-col col-2><img src="../../assets/img/move2perform/flexion_clearing.svg" style="height: 30px;"/></ion-col>
-          <ion-col col-10>Flexion Clearing</ion-col>
-        </ion-row>
-
-      </ion-col>
-      <ion-col col-3 text-center>
-        <ion-badge color="secondary">-</ion-badge>
-      </ion-col>
-    </ion-row>
-
-    <ion-row>
-      <ion-col col-9>
-
-        <ion-row>
-          <ion-col col-2><img src="../../assets/img/move2perform/inline_lunge.svg" style="height: 30px;"/></ion-col>
-          <ion-col col-10>Inline Lunge</ion-col>
-        </ion-row>
-
-      </ion-col>
-      <ion-col col-3>
-        <ion-row>
-          <ion-col col-6><ion-badge color="secondary">2</ion-badge></ion-col>
-          <ion-col col-6><ion-badge color="secondary">2</ion-badge></ion-col>
-        </ion-row>
-      </ion-col>
-    </ion-row>
-
-    <ion-row>
-      <ion-col col-9>
-
-        <ion-row>
-          <ion-col col-2><img src="../../assets/img/move2perform/movement_screen.svg" style="height: 30px;"/></ion-col>
-          <ion-col col-10>Deep Squat</ion-col>
-        </ion-row>
-
-      </ion-col>
-      <ion-col col-3 text-center>
-        <ion-badge color="secondary">2</ion-badge>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-
-
-  <ion-list no-lines>
-    <ion-list-header color="dark">
-      Y-Balance Test
-    </ion-list-header>
-    <ion-list-header color="light">
-      Lower Quarter Reach
+    <ion-list-header color="light" color="Fail">
+      Movement Control
     </ion-list-header>
 
-    <ion-item>
-      <ion-label>Closed Chain Dorsiflexion</ion-label>
-      <ion-checkbox color="secondary" item-right checked="true"></ion-checkbox>
-      <div item-left text-center style="width: 30px;">
-        <img src="../../assets/img/move2perform/closed_chain_dorsiflexion.svg" style="height: 30px;"/>
-      </div>
+    <ion-grid>
 
-    </ion-item>
-    <ion-item>
-      <ion-label>Anterior Reach</ion-label>
-      <ion-checkbox color="secondary" item-right checked="true"></ion-checkbox>
-      <div item-left text-center style="width: 30px;">
-        <img src="../../assets/img/move2perform/anterior_reach.svg" style="height: 30px;"/>
-      </div>
-    </ion-item>
-    <ion-item>
-      <ion-label>Posterolateral Reach</ion-label>
-      <ion-checkbox color="primary" item-right checked="true"></ion-checkbox>
-      <div item-left text-center style="width: 30px;">
-        <img src="../../assets/img/move2perform/posterolateral_reach.svg" style="height: 30px;"/>
-      </div>
-    </ion-item>
-
-    <ion-list-header color="light">
-      Upper Quarter Reach
-    </ion-list-header>
-
-    <ion-item>
-      <ion-label>Medial Reach</ion-label>
-      <ion-checkbox color="primary" item-right checked="true"></ion-checkbox>
-      <div item-left text-center style="width: 30px;">
-        <img src="../../assets/img/move2perform/medial_reach.svg" style="height: 30px;"/>
-      </div>
-    </ion-item>
-
-    <ion-item>
-      <ion-label>Inferolateral Reach</ion-label>
-      <ion-checkbox color="primary" item-right checked="true"></ion-checkbox>
-      <div item-left text-center style="width: 30px;">
-        <img src="../../assets/img/move2perform/inferolateral_reach.svg" style="height: 30px;"/>
-      </div>
-    </ion-item>
-
-    <ion-item>
-      <ion-label>Superolateral Reach</ion-label>
-      <ion-checkbox color="primary" item-right checked="true"></ion-checkbox>
-      <div item-left text-center style="width: 30px;">
-        <img src="../../assets/img/move2perform/superolateral_reach.svg" style="height: 30px;"/>
-      </div>
-    </ion-item>
-
+      <ion-row>
+        <ion-col col-12>
+          <p>You scored below the acceptable level of movement  control.</p>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
 
   </ion-list>
 
